--- a/playbooks/oracle_backup/validate_chunks.yml
+++ b/playbooks/oracle_backup/validate_chunks.yml
@@ -40,45 +40,25 @@
     metadata_working_directory: /home/oracle/admin/metadata_validation
     num_of_days_back_to_validate: 7
 
-# Get the Delius Slack token is stored in various places depending on the environment:  try all 3 known locations
-- name: Get Slack Token
-  shell: |
-    export PATH=$PATH:/usr/local/bin
-    aws ssm get-parameter --name manual-ops-alerts-slack-token --region {{ region }} --output text --with-decryption --query Parameter.Value || \
-    aws ssm get-parameter --name /alfresco/slack/token --region {{ region }} --output text --with-decryption --query Parameter.Value || \
-    aws ssm get-parameter --name /engineering-prod/engineering/oem-database/db/slack_token --region {{ region }} --output text --with-decryption --query Parameter.Value
-  register: getslacktoken
-  changed_when: false
+- name: Get Passwords
+  include_tasks: get_facts.yml
+  vars:
+    database_sid: "{{ database_primary_sid | default(database_standby_sid) }}"
+    get_slack_channel:
 
-- name: Setup Slack Configuration
+- name: Set Environment Variables Required For Shell And Script Modules
   set_fact:
-    slack_channel: "#delius-aws-oracle-dev-alerts"
-
-# Only production database alerts should go to the prod channel
-- name: Setup Slack Configuration for Production
-  set_fact:
-    slack_channel: "#delius-aws-oracle-prod-alerts"
-  when: environment_name in ['delius-core-production']
-
-- name: Get RMAN Catalog Password
-  shell: |
-    export PATH=$PATH:/usr/local/bin
-    INSTANCEID=$(wget -q -O - http://169.254.169.254/latest/meta-data/instance-id)
-    ENVIRONMENT_NAME=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=environment-name"  --query "Tags[].Value" --output text)
-    DELIUS_ENVIRONMENT=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=delius-environment"  --query "Tags[].Value" --output text)
-    APPLICATION=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=application"  --query "Tags[].Value" --output text | sed 's/-core//')
-    aws secretsmanager get-secret-value --secret-id ${ENVIRONMENT_NAME}-${DELIUS_ENVIRONMENT}-${APPLICATION}-dba-passwords --region {{ region }} --query SecretString --output text| jq -r .rman
-  register: rman_password
-  changed_when: false
-  no_log: true
-
-- name: Set RMAN Catalog Connection
-  set_fact:
-    rman_catalog_connect: "{{ 'rman19c/' + rman_password.stdout + '@' + catalog if (catalog is defined) else 'NOCATALOG' }}"
-  no_log: true
+    assume_role_name: "{{ secretsmanager_passwords['catalog'].assume_role_name }}"
+    secret_account_id: "{{ account_ids[secretsmanager_passwords['catalog'].account_name] }}"
+    secret: "{{ secretsmanager_passwords['catalog'].secret }}"
 
 - name: Get DBID
-  script: run_rman_command.sh {{ database_primary_sid | default(database_standby_sid) }}  "{{ rman_catalog_connect }}" "exit"
+  script: run_rman_command.sh {{ database_primary_sid | default(database_standby_sid) }} "exit"
+  environment:
+    CATALOG: "{{ catalog }}"
+    ASSUME_ROLE_NAME: "{{ assume_role_name }}"
+    SECRET_ACCOUNT_ID: "{{ secret_account_id }}"
+    SECRET: "{{ secret }}"
   register: get_dbid
   changed_when: false
 
@@ -105,7 +85,12 @@
 # The rman_backup_list.txt file contains 3 columns:
 # (1) Backup Piece Handle, (2) Backup Piece ID, (3) Availability
 - name: Get List of Backup Pieces from RMAN Catalog and log to Local Working File
-  script: get_rman_backups.sh "{{ rman_catalog_connect }}" {{ num_of_days_back_to_validate }} > {{ metadata_working_directory }}/rman_backup_list.txt
+  script: get_rman_backups.sh {{ num_of_days_back_to_validate }} > {{ metadata_working_directory }}/rman_backup_list.txt
+  environment:
+    CATALOG: "{{ catalog }}"
+    ASSUME_ROLE_NAME: "{{ assume_role_name }}"
+    SECRET_ACCOUNT_ID: "{{ secret_account_id }}"
+    SECRET: "{{ secret }}"
 
 # The Ansible XML Module is not available so we use Grep to pull out the Chunk information from each Metadata File
 # The metadata_summary.txt file contains 3 columns:
@@ -181,7 +166,7 @@
 
     - name: Send notification message via Slack if Missing Chunks Detected Without Previous Fix Attempt
       community.general.slack:
-        token: "{{ getslacktoken.stdout }}"
+        token: "{{ getslacktoken }}"
         msg: "Missing chunks detected in backuppieces {{ corrupt_backup_pieces | join(',') }}.  Attempting fix by re-running backup for these items."
         channel: "{{ slack_channel }}"
         username: "Missing Backup Chunks {{ inventory_hostname }}"
@@ -194,7 +179,7 @@
 
     - name: Send notification message via Slack if Missing Chunks Detected And No Fix Attempt Specified
       community.general.slack:
-        token: "{{ getslacktoken.stdout }}"
+        token: "{{ getslacktoken }}"
         msg: "Missing chunks detected in backuppieces {{ corrupt_backup_pieces | join(',') }}.  No Fix will be attempted."
         channel: "{{ slack_channel }}"
         username: "Missing Backup Chunks {{ inventory_hostname }}"
@@ -207,7 +192,7 @@
 
     - name: Send notification message via Slack if Missing Chunks Detected After Previous Fix Attempt
       community.general.slack:
-        token: "{{ getslacktoken.stdout }}"
+        token: "{{ getslacktoken }}"
         msg: "Missing chunks detected (after fix attempt) in backuppieces {{ corrupt_backup_pieces | join(',') }}."
         channel: "{{ slack_channel }}"
         username: "Missing Backup Chunks {{ inventory_hostname }}"
@@ -219,7 +204,7 @@
 
 - name: Send notification message via Slack if Not Missing Chunks Detected After Previous Fix Attempt
   community.general.slack:
-    token: "{{ getslacktoken.stdout }}"
+    token: "{{ getslacktoken }}"
     msg: "Backups with missing chunks successfully replaced by new backups."
     channel: "{{ slack_channel }}"
     username: "Missing Backup Chunks {{ inventory_hostname }}"
@@ -236,7 +221,12 @@
   block:
     # Using the list of Backup Piece IDs we use RMAN to get the corresponding Backup Set IDs
     - name: Get Backup Sets Containing Missing Backup Pieces
-      script: run_rman_command.sh {{ database_primary_sid | default(database_standby_sid) }}  "{{ rman_catalog_connect }}" "list backuppiece {{ corrupt_backup_pieces | join(',') }} ;"
+      script: run_rman_command.sh {{ database_primary_sid | default(database_standby_sid) }} "list backuppiece {{ corrupt_backup_pieces | join(',') }} ;"
+      environment:
+        CATALOG: "{{ catalog }}"
+        ASSUME_ROLE_NAME: "{{ assume_role_name }}"
+        SECRET_ACCOUNT_ID: "{{ secret_account_id }}"
+        SECRET: "{{ secret }}"
       register: get_backupsets
       changed_when: false
 
@@ -251,7 +241,12 @@
 
     # Now run RMAN to find what was in those Backup Sets - these may be Datafile backups or Archivelog backups
     - name: Get Datafiles and Archivelogs in Corrupt Backup Sets
-      script: run_rman_command.sh {{ database_primary_sid | default(database_standby_sid) }}  "{{ rman_catalog_connect }}" "list backupset {{ corrupt_backup_sets | join(',') }} ;"
+      script: run_rman_command.sh {{ database_primary_sid | default(database_standby_sid) }} "list backupset {{ corrupt_backup_sets | join(',') }} ;"
+      environment:
+        CATALOG: "{{ catalog }}"
+        ASSUME_ROLE_NAME: "{{ assume_role_name }}"
+        SECRET_ACCOUNT_ID: "{{ secret_account_id }}"
+        SECRET: "{{ secret }}"
       register: backupset_contents
       changed_when: false
 
@@ -316,6 +311,10 @@
       block:
         - name: Running RMAN script to Replace Corrupt Level 0 Backup Sets
           shell: /home/oracle/admin/rman_scripts/rman_backup.sh -d {{ database_primary_sid | default(database_standby_sid) }} -g {{ database_global_database }} -t HOT -b Y -i 0 -n Y -c {{ catalog }} -l {{ level0_data_files | join(',') }}
+          environment:
+            ASSUME_ROLE_NAME: "{{ assume_role_name }}"
+            SECRET_ACCOUNT_ID: "{{ secret_account_id }}"
+            SECRET: "{{ secret }}"
           async: "{{ allowable_duration|default(7200) }}"
           poll: 20
           register: backup_cmd_output_0
@@ -336,6 +335,10 @@
       block:
         - name: Running RMAN script to Replace Corrupt Level 1 Backup Sets
           shell: /home/oracle/admin/rman_scripts/rman_backup.sh -d {{ database_primary_sid | default(database_standby_sid) }}  -g {{ database_global_database }} -t HOT -b Y -i 1 -n Y -c {{ catalog }} -l {{ level1_data_files | join(',') }}
+          environment:
+            ASSUME_ROLE_NAME: "{{ assume_role_name }}"
+            SECRET_ACCOUNT_ID: "{{ secret_account_id }}"
+            SECRET: "{{ secret }}"
           async: "{{ allowable_duration|default(3600) }}"
           poll: 20
           register: backup_cmd_output_1
@@ -406,7 +409,7 @@
 
     - name: Send notification message via Slack that Fix It Job has Run
       community.general.slack:
-        token: "{{ getslacktoken.stdout }}"
+        token: "{{ getslacktoken }}"
         msg: "Fix-it job run to take new backups to replace existing backups with missing chunks - {{ notification }}."
         channel: "{{ slack_channel }}"
         username: "Missing Backup Chunks {{ inventory_hostname }}"
