--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -111,6 +111,12 @@ jobs:
       TargetEnvironment: ${{ steps.preparermantargetname.outputs.TargetEnvironment }}-preapproved
       BackupStatus: ${{ steps.preparermantargetname.outputs.BackupStatus }}
       BackupStandbyOnPrimaryFailure: ${{ steps.preparermantargetname.outputs.BackupStandbyOnPrimaryFailure }}
+      Period: ${{ steps.preparermantargetname.outputs.Period }}
+      FixAbsentChunks: ${{ steps.preparermantargetname.outputs.FixAbsentChunks }}
+      EnableTrace: ${{ steps.preparermantargetname.outputs.EnableTrace }}
+      VerboseOutput: ${{ steps.preparermantargetname.outputs.VerboseOutput }}
+      SourceCodeVersion: ${{ steps.preparermantargetname.outputs.SourceCodeVersion }}
+      SourceConfigVersion: ${{ steps.preparermantargetname.outputs.SourceCodeVersion }}
     steps:
       - name: Prepare Rman Target
         id: preparermantargetname
@@ -122,10 +128,24 @@ jobs:
               then
                 TargetHost="${{ github.event.inputs.TargetHost }}"
                 TargetEnvironment="${{ github.event.inputs.TargetEnvironment }}"
+                Period="${{ github.event.inputs.Period }}"
+                BackupStandbyOnPrimaryFailure="${{ github.event.inputs.BackupStandbyOnPrimaryFailure }}"
+                FixAbsentChunks="${{ github.event.inputs.FixAbsentChunks }}"
+                EnableTrace="${{ github.event.inputs.EnableTrace }}"
+                VerboseOutput="${{ github.event.inputs.VerboseOutput }}"
+                SourceCodeVersion="${{ github.event.inputs.SourceCodeVersion }}"
+                SourceConfigVersion="${{ github.event.inputs.SourceConfigVersion }}"
               elif [[ "${{ github.event_name }}" == "schedule" ]]
               then
                 TargetHost="${{ inputs.TargetHost }}"
                 TargetEnvironment="${{ inputs.TargetEnvironment }}"
+                Period="${{ inputs.Period }}"
+                BackupStandbyOnPrimaryFailure="yes"
+                FixAbsentChunks="yes"
+                EnableTrace="no"
+                VerboseOutput=""
+                SourceCodeVersion="main"
+                SourceConfigVersion="main"
               elif [[ "${{ github.event_name }}" == "repository_dispatch" ]] && [[ "${{ github.event.action}}" == "oracle-db-backup-failure" ]]
               then
                 echo "Payload: ${{ github.event.client_payload }}"
@@ -137,16 +157,30 @@ jobs:
              echo "TargetHost: $TargetHost"
              TargetEnvironment=$(echo ${PARAMETERS_JSON} | jq -r '.target_environment')
              echo "TargetEnvironment: $TargetEnvironment"
-             BackupStatus=$(echo ${PARAMETERS_JSON} | jq -r '.backup_status')
+             BackupStatus=$(echo ${PARAMETERS_JSON} | jq -r '.backup_status // starting')
              if [[ "$BackupStatus" == "failed" ]];
              then
                 BackupStandbyOnPrimaryFailure=$(echo ${PARAMETERS_JSON} | jq -r '.backup_standby_on_primary_failure')
              fi
           fi
+          Inputs=$(cat <<-'EOF'
+          {
+            "TargetEnvironment": "$TargetEnvironment",
+            "TargetHost": "$TargetHost",
+            "Period": "$Period",
+            "BackupStandbyOnPrimaryFailure": "$BackupStandbyOnPrimaryFailure",
+            "FixAbsentChunks": "$FixAbsentChunks",
+            "EnableTrace": "$EnableTrace",
+            "VerboseOutput": "$VerboseOutput",
+            "SourceCodeVersion": "$SourceCodeVersion",
+            "SourceConfigVersion" "$SourceConfigVersion"
+          }
+          EOF
           RmanTarget="environment_name_$(echo $TargetEnvironment | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_$TargetHost"
           echo "RmanTarget=$RmanTarget" >> $GITHUB_OUTPUT
           echo "TargetEnvironment=$TargetEnvironment" >> $GITHUB_OUTPUT
           echo "BackupError=$BackupError" >> $GITHUB_OUTPUT
+          echo "Inputs=$Inputs" >> $GITHUB_OUTPUT
 
   # Start deployment container job based on the build delius-ansible-aws image
   deployment:
@@ -159,16 +193,20 @@ jobs:
     timeout-minutes: 1440
     env:
       backup_command: ansible-playbook operations/playbooks/oracle_backup/backup.yml
+      validate_command: ansible-playbook operations/playbooks/oracle_backup/validate.yml
       inventory: inventory/ansible
-      Period: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.Period || (github.event_name == 'schedule' && inputs.Period ))  }}"
-      FixAbsentChunks: "${{ github.event_name == 'workflow_dispatch' && github.event.inputs.FixAbsentChunks || 'yes' }}"
-      EnableTrace: "${{ github.event_name == 'workflow_dispatch' && github.event.inputs.EnableTrace || 'no' }}"
-      VerboseOutput: "${{ github.event_name == 'workflow_dispatch' && github.event.inputs.VerboseOutput || '' }}"
+      Period: "${{needs.build_rman_target_name.outputs.Period}}"
+      FixAbsentChunks: "${{needs.build_rman_target_name.outputs.FixAbsentChunks}}"
+      EnableTrace: "${{needs.build_rman_target_name.outputs.EnableTrace}}"
+      VerboseOutput: "${{needs.build_rman_target_name.outputs.VerboseOutput}}"
       RmanTarget: "${{needs.build_rman_target_name.outputs.RmanTarget}}"
       TargetEnvironment: "${{needs.build_rman_target_name.outputs.TargetEnvironment}}"
       SSMParameter: "/oracle-backups/${{needs.build_rman_target_name.outputs.RmanTarget}}"
       BackupStatus: "${{needs.build_rman_target_name.outputs.BackupStatus}}"
       BackupStandbyOnPrimaryFailure: "${{needs.build_rman_target_name.outputs.BackupStandbyOnPrimaryFailure}}"
+      SourceCodeVersion:  "${{needs.build_rman_target_name.outputs.SourceCodeVersion}}"
+      SourceConfigVersion:  "${{needs.build_rman_target_name.outputs.SourceConfigVersion}}"
+      Inputs:  "${{needs.build_rman_target_name.outputs.Inputs}}"
       ansible_config: operations/playbooks/ansible.cfg
     continue-on-error: false
     steps:
@@ -181,7 +219,7 @@ jobs:
             playbooks/oracle_backup
             playbooks/ansible.cfg
           path: operations
-          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'main' }}
+          ref: env.SourceCodeVersion
           fetch-depth: 0
 
       - name: Checkout Ansible Inventory From modernisation-platform-configuration-management
@@ -193,7 +231,7 @@ jobs:
             ansible/hosts
             ansible/group_vars
           path: inventory
-          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
+          ref: env.SourceCodeVersion
           fetch-depth: 0
 
       - name: Checkout Ansible Required Roles From modernisation-platform-configuration-management
@@ -205,7 +243,7 @@ jobs:
             ansible/roles/secretsmanager-passwords
             ansible/roles/get-modernisation-platform-facts
           path: roles
-          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
+          ref: env.SourceConfigVersion
           fetch-depth: 0
 
       - name: Configure AWS Credentials
@@ -230,9 +268,9 @@ jobs:
                 --value "{\"Phase\":\"Backup\",\"Status\":\"Initializing\",\"Message\":\"Running on $RmanTarget\",\"TargetEnvironment\":\"$TargetEnvironment\",\"RmanTarget\":\"$RmanTarget\",\"FixAbsentChunks\":\"$FixAbsentChunks\",\"VerboseOutput\":\"$VerboseOutput\"}" \
                 --description "Runtime phase and status details of RMAN backups running on the $RmanTarget host"
 
-      # Only run backup on primary if that is the target host and no error has already occurred
-      - name: Start Ansible Backup On Primary
-        if: contains(env.RmanTarget,'primarydb') && env.BackupStatus == 'starting'
+      # Only run backup on initial choice of host
+      - name: Start Ansible Backup On Selected Host
+        if: env.BackupStatus == 'starting'
         id: backup
         continue-on-error: false
         run: |
@@ -253,6 +291,7 @@ jobs:
               $backup_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=${RmanTarget} -e daily_weekly=$Period -e enable_trace=$EnableTrace $VerboseOutput
             else
               echo "Standby Not Configured"
+              echo "BackupStatus=fatal" >> $GITHUB_OUTPUT
             fi
 
       - name: Start Ansible Backup On Second Standby (If Exists) If First Standby Backup Failed
@@ -268,11 +307,36 @@ jobs:
               $backup_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=${RmanTarget} -e daily_weekly=$Period -e enable_trace=$EnableTrace $VerboseOutput
             else
               echo "Second Standby Not Configured"
+              echo "BackupStatus=fatal" >> $GITHUB_OUTPUT
             fi
 
-
       - name: Start Ansible Validate And Fix Absent Chunks
+        if: env.BackupStatus == 'success'
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_backup/roles
           $validate_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=$RmanTarget -e fix_absent_chunks=$FixAbsentChunks $VerboseOutput
+
+      - name: Get Slack Token
+        id: get-slack-token
+        if: failure()
+        run: |
+                ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+                OEM_ACCOUNT_ID=$(aws ssm get-parameter --name account_ids --region eu-west-2 --with-decryption  --output json | \
+                      jq '.Parameter.Value' | tr -d '\' | sed 's/^\"//' | sed 's/\"$//' | \
+                      jq -r 'to_entries | map(select(.key | contains("hmpps-oem-"))) | first' | jq -r '.value' )
+                SECRET_ARN="arn:aws:secretsmanager:eu-west-2:${OEM_ACCOUNT_ID}:secret:/oracle/database/EMREP/shared-passwords"
+                SECRET_VALUE=$(aws secretsmanager get-secret-value --secret-id "${SECRET_ARN}" --query SecretString --output json)
+                SLACK_TOKEN=$(echo ${SECRET_VALUE} | jq -r | jq -r 'to_entries[] | select(.key=="slack_token").value')
+                echo "slack_token=${SLACK_TOKEN}" >> $GITHUB_OUTPUT
+
+      - name: Slack Failure Notification
+        id: slack
+        if: failure()
+        uses: slackapi/slack-github-action@v1.25.0
+        with:
+            channel-id: "${{ env.SlackChannel }}"
+            payload: |
+              {"icon_emoji":"broken_record","text":"Failed Backup Validation","blocks":[{"type": "section","text": {"type": "mrkdwn","text": ":no_entry: Failed Backup Validation:"}},{"type": "section","fields":[{"type": "mrkdwn","text": "*Workflow:*\n<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|${{ github.workflow }}>"},{"type": "mrkdwn","text": "*Job:*\n${{ github.job }}"},{"type": "mrkdwn","text": "*Repo:*\n${{ github.repository }}"},{"type": "mrkdwn","text": "*Rman Target:*\n${{ env.RmanTarget }}"}]}]}
+        env:
+          SLACK_BOT_TOKEN: ${{ steps.get-slack-token.outputs.slack_token }}
